--- a/tournament-portal/src/index.html
+++ b/tournament-portal/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFkJf8OtSPZPfn3600Xqud8ydZicgHcH8"></script>
 </head>
 <body class="dark-theme">
   <app-root></app-root>
